# rp-recorder

./: .gitignore  LICENSE.txt  Pipfile  README.md  pyproject.toml  radioparadise.toml  radioparadise.toml.sample  radioparadise.yaml  setup.py
rprecorder/: cuesheet.py  recorder.py
rprecorder/cli/: record.py  track.py
src/rprecorder/: chapters.py  config.py  cuesheet.py  recorder.py  shoutcast.py  track.py  tracker.py  utils.py
src/rprecorder/cli/: record.py  track.py
src/rprecorder/writer/: __init__.py  common.py  cuesheet.py  matroska.py  tracklist.py
tests/: test_utils.py
